@@ -158,16 +158,16 @@ FieldNumberType
 \ccOperations
 
 \ccSetThreeColumns{Interval_nt_advanced}{}{\hspace*{8.5cm}}
-\ccFunction{Interval_nt_advanced convert_to<Interval_nt_advanced>(NT);}
-{Several such functions provide a cast from the following numerical types
-to an \ccc{Interval_nt_advanced} containing the value.  The following types are
-supported: \ccc{leda_real}, \ccc{leda_rational}, \ccc{leda_integer},
-\ccc{leda_bigfloat}, \ccc{Gmpz}, \ccc{Fixed_precision_nt}, all built-in
-types that fit exactly in a \ccc{double} (which excludes \ccc{long double}
-and 64 bits integers, which must be treated separately), and all
-\ccc{Quotient<RT>} where RT is a type listed above.
-The user can add such functions for his own number types, see the files
-\ccc{CGAL/Interval_arithmetic/IA_*.h} for examples.}
+%\ccFunction{Interval_nt_advanced convert_to<Interval_nt_advanced>(NT);}
+%{Several such functions provide a cast from the following numerical types
+%to an \ccc{Interval_nt_advanced} containing the value.  The following types are
+%supported: \ccc{leda_real}, \ccc{leda_rational}, \ccc{leda_integer},
+%\ccc{leda_bigfloat}, \ccc{Gmpz}, \ccc{Fixed_precision_nt}, all built-in
+%types that fit exactly in a \ccc{double} (which excludes \ccc{long double}
+%and 64 bits integers, which must be treated separately), and all
+%\ccc{Quotient<RT>} where RT is a type listed above.
+%The user can add such functions for his own number types, see the files
+%\ccc{CGAL/Interval_arithmetic/IA_*.h} for examples.}
 
 % FPU rounding modes~:
 
