@@ -36,7 +36,7 @@
 #include <CGAL/Interval_arithmetic.h>
 #include <CGAL/Static_filter_error.h>
 #include <CGAL/Restricted_double.h>
-#include <CGAL/misc.h>
+#include <CGAL/NT_converter.h>
 
 CGAL_BEGIN_NAMESPACE
 
@@ -128,7 +128,7 @@ public:
   // The access functions.
   const CT & value() const { return _value; }
   IA interval() const { return give_interval(cache()); }
-  ET exact()    const { return convert_to<ET>(_value); }
+  ET exact()    const { return NT_converter<CT,ET>(_value); }
 
   double to_double() const { return CGAL::to_double(_value); }
   Restricted_double dbl() const { return Restricted_double(to_double()); }
